--- a/static/default.css
+++ b/static/default.css
@@ -7,6 +7,7 @@ html, body {
     background-color: #ccc;
     width: 100%;
     height: 100%;
+    font-family: helvetica, sans-serif;
 }
 
 h4 {
@@ -22,6 +23,16 @@ p {
     font-size: 16px;
 }
 
+.username {
+    color: #000;
+    margin: 0 0 10px 0;
+}
+
+.pass {
+    color: #000;
+    margin: 10px 0 10px 0;
+}
+
 .post {
     width: 560px;
     background-color: #fff;
@@ -31,7 +42,18 @@ p {
 }
 
 #feed {
-    font-family: helvetica, sans-serif;
+    position: absolute;
+    background-color: #222;
+    color: #fff;
+    border-radius: 10px;
+    top: 20px;
+    left: 380px;
+    width: 600px;
+    padding: 15px;
+}
+
+#login {
+    display: none;
     position: absolute;
     background-color: #222;
     color: #fff;
@@ -46,7 +68,6 @@ p {
     position: absolute;
     top: 20px;
     left: 20px;
-    font-family: helvetica, sans-serif;
     background-color: #222;
     color: #fff;
     margin: 0 auto;
@@ -55,7 +76,29 @@ p {
     border-radius: 10px;
 }
 
-input[type=text] {
+#loginbutton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 80px;
+    height: 50px;
+    margin: 0 auto;
+    padding: 15px;
+    border: none;
+    border-radius: 10px;
+    background-color: #222;
+    color: #fff;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+#loginbutton:hover {
+    background-color: #fff;
+    color: #000;
+    transition: .3s;
+}
+
+input[type=text], input[type=password] {
     border: none;
     border-radius: 4px;
     outline: none;
