--- a/static/default.css
+++ b/static/default.css
@@ -23,15 +23,9 @@ p {
     font-size: 16px;
 }
 
-.username {
-    color: #000;
-    margin: 0 0 10px 0;
-}
+.bmmargin { margin: 0 0 10px 0; }
 
-.pass {
-    color: #000;
-    margin: 10px 0 10px 0;
-}
+.tbmargin { margin: 10px 0 10px 0; }
 
 .post {
     width: 560px;
@@ -41,7 +35,7 @@ p {
     margin: 15px auto;
 }
 
-#feed {
+.center {
     position: absolute;
     background-color: #222;
     color: #fff;
@@ -52,20 +46,13 @@ p {
     padding: 15px;
 }
 
-#login {
-    display: none;
-    position: absolute;
-    background-color: #222;
-    color: #fff;
-    border-radius: 10px;
-    top: 20px;
-    left: 380px;
-    width: 600px;
-    padding: 15px;
-}
+#feed { display: block; }
+#login { display: none; }
+#register { display: none; }
 
 #control {
     position: absolute;
+    display: none;
     top: 20px;
     left: 20px;
     background-color: #222;
@@ -80,9 +67,8 @@ p {
     position: absolute;
     top: 20px;
     right: 20px;
-    width: 80px;
+    width: 100px;
     height: 50px;
-    margin: 0 auto;
     padding: 15px;
     border: none;
     border-radius: 10px;
@@ -90,6 +76,7 @@ p {
     color: #fff;
     box-sizing: border-box;
     cursor: pointer;
+    text-align: center;
 }
 
 #loginbutton:hover {
@@ -115,13 +102,13 @@ textarea {
     font-size: 14px;
     padding: 15px;
     width: 100%;
-    height: 200px;
+    height: 120px;
     margin-top: 10px;
     resize: none;
     box-sizing: border-box;
 }
 
-input[type=submit] {
+input[type=submit], button {
     background-color: #222;
     color: #fff;
     outline: none;
@@ -134,9 +121,18 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, button:hover {
     background-color: #fff;
     color: #222;
     border: 1px #fff solid;
     transition: .3s;
+}
+
+.halfsize {
+    float: left;
+    width: 290px !important;
+}
+
+#registerbutton {
+    margin-left: 20px;
 }
